# examsim

./: .bashrc  .gitignore  Cargo.toml  Readme.md  config01.toml  config02.toml  config03.toml  config10.toml  config11.toml  config12.toml  configH01.toml  configH02.toml  configHS01.toml  configHS02.toml  configHS03.toml  configHS04.toml  configHS05.toml  configS1.toml  configS2.toml  configS3.toml  configS4.toml  configS5.toml  count.awk  memo.md  run50.sh  u2014v01.csv
src/: college.rs  config.rs  main.rs  student.rs  univ.rs
