[package]
name = "examsim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "2.33.3"
csv = "1.1.6"
once_cell = "1.8.0"
rand = "0.8.3"
rayon = "1.5.1"
rayon_croissant = "0.2.0"
serde = {version = "1.0.126", features = ["derive"]}
statrs = "0.14.0"
superslice = "1.0.0"
toml = "0.5.8"
