[package]
name = "examsim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
clap = "2.33.3"
csv = "1.1.6"
env_logger = "0.9.0"
once_cell = "1.8.0"
rand = { version = "0.8.3", features = ["alloc"]}
rand_distr = "0.4.1"
rand_xoshiro = "0.6.0"
rayon = "1.5.1"
serde = {version = "1.0.126", features = ["derive"]}
simplelog = "0.10.2"
sprs = "0.11.0"
superslice = "1.0.0"
toml = "0.5.8"
